--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+/****************/
+/* Outer border */
+/****************/
+
+#container{
+    border: none;
+    box-shadow: none;
+}
+
 /**************/
 /* Logo image */
 /**************/
@@ -77,6 +86,11 @@
 /* Body */
 /********/
 
+#main{
+    min-width: none;
+    width: 71%;
+}
+
 #main h2{
     margin-left:40px;
 }
@@ -84,4 +98,12 @@
 #content{
     margin-left:40px;
     border-top: 1.5px solid #182231;
+}
+
+#journalDescription p{
+    margin-left: 0px;
+}
+
+#additionalHomeContent p{
+    margin-left:0px;
 }
