--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+
+#container{
+    margin-bottom:0px;
+}
+
+#my-header{
+    padding: 10px;
+    background-color: #b690c1;
+    margin-left: -20px;
+    margin-right: -10px;
+    position: fixed;
+    width: 100%;
+    z-index: 1000 !important;
+}
+
+#my-logo{
+    width: 50px;
+    margin-left: 4%;
+}
+
+#my-napis{
+    margin-left: 20px;
+    width: 30%;
+}
+
 /****************/
 /* Outer border */
 /****************/
@@ -13,6 +38,9 @@
 
 /* primarjalna knjizevnost */
 #header h1 img{
+    /* just hide kz ugly */
+    visibility:hidden;
+    
     /* size */
     width: calc(669px / 2);
     height: calc(200px / 2);
@@ -29,21 +57,22 @@
 
 #navbar{
     /* position */
-    position: absolute;
-    top: 40px;
-    left: 350px;
+    position: fixed;
+    top: 75px;
+    left: 50%;
     
     /* background */
     background: none;
+    
+    transform: translate(-50%, 0%);
     
 }
 
 /* Domov | O publikaciji | ... */
 #navbar a{
     /* size */
-    height: 40px;
+    height: 30px;
     font-size: 22px;
-    line-height: 100px;
     
     /* borders */
     border-right: none;
@@ -92,6 +121,7 @@
 #main{
     min-width: none;
     width: 71%;
+    float:none;
 }
 
 #main h2{
@@ -101,6 +131,7 @@
 #content{
     margin-left:40px;
     border-top: 1.5px solid #182231;
+    margin-bottom:50px;
 }
 
 #journalDescription p{
@@ -124,17 +155,26 @@
     -moz-box-shadow: none;
     -webkit-box-shadow: none;
     margin-bottom:20px;
+    margin-right:100px;
+    
 }
 
 #rightSidebar{
-    width: 17%;
-    margin-right: 7%;
+    width: 102%;
+    margin-left:-20px;
+    float:none;
+    background-color:black;
+    color:white;
+    display: -webkit-inline-box;
+    
+    margin-right:0px;
+    padding-bottom:120px;
 }
 
 #sidebar DIV.block SPAN.blockTitle{
     background: none;
-    border-bottom: solid 1.5px;
-    border-color: grey;
+    /*border-bottom: solid 1.5px;
+    border-color: grey;*/
     
     text-indent: 1px;
     height: 16px;
@@ -144,9 +184,10 @@
 
 /* languages */
 #sidebarLanguageToggle{
-    position: absolute;
-    top: 3%;
+    position: fixed;
+    top: 0%;
     left: 76%;
+    z-index: 10001 !important;
 }
 
 #sidebarLanguageToggle img{
@@ -160,6 +201,7 @@
     margin-bottom: 4px;
     position: absolute;
     top: 10%;
+    visibility:hidden;
 }
 
 #sidebarFontSize span{
@@ -222,4 +264,40 @@
     text-decoration:none;
     color: grey;
     font-weight: bold;
+}
+
+
+/* ###################################################### */
+/* ------------------------------------------------------ */
+/*                          ARHIVI                        */
+/* ------------------------------------------------------ */
+
+#issues h3{
+    color:gray;
+    font-size:2.5em;
+}
+
+#issues h4 a{
+    color:gray;
+    font-size:1em;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+#issues h4 a:hover{
+    background-color: transparent;
+    color: #4c4c4c;
+}
+
+#issues h4 a:hover{
+    background-color: transparent;
+    color: #4c4c4c;
+}
+
+.issueCoverImage img{
+    position: absolute;
+    top: 30%;
+    left: 45%;
+    width:25%;
+    visibility: hidden;
 }
