--- a/style.css
+++ b/style.css
@@ -5,17 +5,13 @@
 
 #my-header{
     padding: 10px;
-    background-color: #b690c1;
-    margin-left: -20px;
+    background-color: #ffffff;
+    margin-left: 10px;
     margin-right: -10px;
     position: fixed;
     width: 100%;
     z-index: 1000 !important;
-}
-
-#my-logo{
-    width: 50px;
-    margin-left: 4%;
+    padding-bottom: 90px;
 }
 
 #my-napis{
@@ -56,16 +52,30 @@
 /**********/
 
 #navbar{
-    /* position */
+    width: 100%;
+    text-align: center;
+    border-bottom: solid 1.15px #b690c1;
+    background-color: white;
+    z-index: 1001 !important;
     position: fixed;
-    top: 75px;
+    top: 17%;
+    margin-left: -20px;
+    
+    -webkit-transition:top 100ms ease-in-out;
+    -moz-transition:top 100ms ease-in-out;
+    -o-transition:top 100ms ease-in-out;
+    transition:top 100ms ease-in-out;
+}
+
+.smaller{
+    top: 3% !important;
+    background-color: transparent !important;
+}
+
+#navbar ul{
     left: 50%;
-    
-    /* background */
-    background: none;
-    
-    transform: translate(-50%, 0%);
-    
+    position: relative;
+    transform: translate(-25%,0%);
 }
 
 /* Domov | O publikaciji | ... */
@@ -79,7 +89,7 @@
     
     /* font style */
     font-weight: normal;
-    letter-spacing: -2px;
+    letter-spacing: -1.8px;
     
     /* paddings*/
     padding-right: 20px;
@@ -98,7 +108,7 @@
 
 #breadcrumb{
     /* position */
-    margin-top: -20px;
+    margin-top: 60px;
     margin-left: 40px;
     color: #989898;
 }
@@ -130,8 +140,13 @@
 
 #content{
     margin-left:40px;
-    border-top: 1.5px solid #182231;
+    border-top: 1.5px solid #18223133;
     margin-bottom:50px;
+    margin-right: 53px;
+}
+
+#content > div{
+    margin-bottom: 200px;
 }
 
 #journalDescription p{
@@ -194,6 +209,20 @@
     width: 30px;
     height: 30px;
     margin-right: 10px;
+    
+    -webkit-transition:width 100ms ease-in-out;
+    -moz-transition:width 100ms ease-in-out;
+    -o-transition:width 100ms ease-in-out;
+    transition:width 100ms ease-in-out;
+}
+
+.languageSmall{
+    width:20px !important;
+}
+
+.languageSmallWrapper{
+    right: 3% !important;
+    left: unset !important;
 }
 
 /* font style */
@@ -300,4 +329,12 @@
     left: 45%;
     width:25%;
     visibility: hidden;
+}
+
+
+
+/* LOGIN */
+#content > form{
+    margin-top: 30px;
+    padding-left: 0px;
 }
