--- a/style.css
+++ b/style.css
@@ -174,6 +174,20 @@
     
 }
 
+#sidebar a:link{
+    color:white;
+    text-decoration:none;
+}
+
+#sidebar a:visited{
+    color:white;
+}
+
+#sidebar a:hover{
+    background-color: inherit;
+    color: gray;
+}
+
 #rightSidebar{
     width: 102%;
     margin-left:-20px;
@@ -188,9 +202,8 @@
 
 #sidebar DIV.block SPAN.blockTitle{
     background: none;
-    /*border-bottom: solid 1.5px;
-    border-color: grey;*/
-    
+    border-bottom: none;
+    color:white;
     text-indent: 1px;
     height: 16px;
     font-size: 13px;
@@ -225,16 +238,29 @@
     left: unset !important;
 }
 
+/* vsebina publikacije */
+#sidebarNavigation label input {
+    margin: 0px 0px 5px 0px;
+}
+
+#sidebarNavigation label select {
+    margin: 0px 0px 5px 0px;
+    width: 100%;
+    border-radius: 3px;
+    height: 23px;
+}
+
+
 /* font style */
 #sidebarFontSize{
     margin-bottom: 4px;
-    position: absolute;
+
     top: 10%;
-    visibility:hidden;
+    visibility:visible;
 }
 
 #sidebarFontSize span{
-    display: none;
+    display: inline;
     color:red;
 }
 
@@ -252,6 +278,12 @@
     padding: 5px 10px 5px 10px;
     border-radius: 3px;
     border-color: gray;
+    background-color: white !important;
+    float: right;
+}
+
+.button:hover {
+    background-color: gray !important;
 }
 
 #sidebarUser table{
@@ -268,31 +300,29 @@
 }
 
 /* notification */
-#notification ul{
-    list-style-type: none;
-    margin-left:-20px;
-}
-
 #notification ul li{
     margin-bottom:4px;
 }
 
-#notification a:link{
-    text-decoration:none;
-    color: grey;
-    font-weight: bold;
-}
-
-#notification a:hover{
-    color: black;
-    background: none;
-}
-
 /* Open Journal System */
-#sidebarDevelopedBy a, #sidebarHelp a{
+#sidebarDevelopedBy a {
     text-decoration:none;
-    color: grey;
+    color: gray !important;
     font-weight: bold;
+    position: fixed;
+    left: 82%;
+    top:22%;
+    z-index: 10000;
+}
+
+#sidebarHelp a {
+    text-decoration:none;
+    color: gray !important;
+    font-weight: bold;
+    position: fixed;
+    left: 95%;
+    top:22%;
+    z-index: 10000;
 }
 
 
