--- a/style.css
+++ b/style.css
@@ -174,13 +174,23 @@
     
 }
 
+#sidebar DIV.wrappedBlock{
+    background: none;
+    box-shadow: none;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    margin-bottom:20px;
+    margin-right:100px;
+    
+}
+
 #sidebar a:link{
-    color:white;
+    color:black;
     text-decoration:none;
 }
 
 #sidebar a:visited{
-    color:white;
+    color:black;
 }
 
 #sidebar a:hover{
@@ -189,21 +199,20 @@
 }
 
 #rightSidebar{
-    width: 102%;
+    width: 103%;
     margin-left:-20px;
     float:none;
-    background-color:black;
-    color:white;
+    background-color:#eadbeb;
+    color:black;
     display: -webkit-inline-box;
-    
     margin-right:0px;
-    padding-bottom:120px;
+    padding-bottom:100px;
 }
 
 #sidebar DIV.block SPAN.blockTitle{
     background: none;
     border-bottom: none;
-    color:white;
+    color:black;
     text-indent: 1px;
     height: 16px;
     font-size: 13px;
@@ -304,6 +313,15 @@
     margin-bottom:4px;
 }
 
+#sidebarDevelopedBy {
+    margin-right: 0 !important;
+    margin-left: 28% !important;
+}
+
+#sidebarHelp {
+    margin-right: 0 !important;
+}
+
 /* Open Journal System */
 #sidebarDevelopedBy a {
     text-decoration:none;
@@ -313,6 +331,8 @@
     left: 82%;
     top:22%;
     z-index: 10000;
+        padding: 0;
+    margin: 0;
 }
 
 #sidebarHelp a {
